package utn.frc.backend.tpi.pedidos.models;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Entity
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class Camion {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "capacidad_peso")
    private double capacidadPeso;

    @Column(name = "volumen")
    private double volumen;

    @Column(name = "disponibilidad")
    private boolean disponibilidad;

    @Column(name = "patente")
    private String patente;

    @Column(name = "modelo")
    private String modelo;

    @Column(name = "capacidad_contenedores")
    private Integer capacidadContenedores;
}
