@startuml ER_Diagram
'Diagrama de Entidades (generado automáticamente)'
hide circle
skinparam linetype ortho

' --- Entidades del módulo pedidos --- '
entity "Cliente" as Cliente {
  +id: Long
  nombre: String
  email: String
  password: String
}

entity "Contenedor" as Contenedor {
  +id: Long
  peso: double
  volumen: double
  estado_id: Long  -- ManyToOne a `Estado` (campo)
  cliente_id: Long -- ManyToOne a `Cliente` (campo)
}

entity "Estado" as Estado {
  +id: Long
  nombre: String
}

entity "HistorialEstado" as HistorialEstado {
  +id: Long
  contenedor_id: Long -- FK a `Contenedor`
  estado_id: Long     -- FK a `Estado`
  fechaCambio: LocalDate
}

entity "Ciudad" as Ciudad {
  +id: Long
  nombre: String
  latitud: double
  longitud: double
}

entity "Deposito" as Deposito {
  +id: Long
  ciudad_id: Long -- ManyToOne a `Ciudad` (campo)
  direccion: String
  latitud: double
  longitud: double
}

entity "Camion" as Camion {
  +id: Long
  capacidadPeso: double
  volumen: double
  disponibilidad: boolean
  patente: String
  modelo: String
  capacidadContenedores: Integer
}

' --- Entidades del módulo logistica --- '
entity "Solicitud" as Solicitud {
  +id: Long
  contenedor_id: Long       -- *NO* mapeado como relación JPA (solo id)
  ciudad_origen_id: Long
  ciudad_destino_id: Long
  deposito_id: Long
  depositos_intermedios: List<Long>
  camion_id: Long
  costoEstimado: Double
  tiempoEstimadoHoras: Double
  fechaEstimadaDespacho: LocalDate
  esFinalizada: boolean
  costoReal: Double
  tiempoRealHoras: Double
  estadoSolicitud: String
}

entity "TramoRuta" as TramoRuta {
  +id: Long
  solicitud_id: Long -- ManyToOne a `Solicitud` (relación JPA)
  ubicacionOrigenId: Long
  ubicacionDestinoId: Long
  origenTipo: String
  destinoTipo: String
  orden: int
  distancia: Double
  tiempoEstimado: Double
  fechaRealSalida: LocalDate
  fechaRealLlegada: LocalDate
  fechaEstimadaSalida: LocalDate
  fechaEstimadaLlegada: LocalDate
  costoEstimado: Double
  costoReal: Double
  estadoTramo: String
  camion_id: Long
}

entity "Tarifa" as Tarifa {
  +id: Long
  tipoTarifa: String
  pesoMinimo: Double
  pesoMaximo: Double
  volumenMinimo: Double
  volumenMaximo: Double
  costoBasePorTramo: Double
  costoPorKm: Double
  costoCombustibleLitro: Double
  costoEstadiaDepositoDia: Double
}

' --- Relaciones --- '
Cliente ||--o{ Contenedor : "tiene"
Estado ||--o{ Contenedor : "estado"
Contenedor ||--o{ HistorialEstado : "historial"
Estado ||--o{ HistorialEstado : "usado_en"
Ciudad ||--o{ Deposito : "contiene"

' Relación JPA entre Solicitud y TramoRuta
Solicitud ||--o{ TramoRuta : "tramos"
TramoRuta }o--|| Solicitud : "solicitud"

' Notas sobre claves que son solo ids (no mapeadas como @ManyToOne)
note right of Solicitud
  Campos como `contenedor_id`, `camion_id`, `deposito_id`
  están guardados como Long (ids) y NO como relaciones JPA
end note

note left of Contenedor
  `estado` y `cliente` están definidos como `@ManyToOne` en
  la clase `Contenedor` (pero sin `mappedBy` inverso en las otras entidades).
end note

@enduml
